--- a/m2/task2.2/index.html
+++ b/m2/task2.2/index.html
@@ -22,10 +22,10 @@
         a { color: #999; text-decoration: none; border-bottom: 1px dotted #999; }
         a:hover { border-bottom-style: solid; color: black; }
         ul { margin: 0 0 32px 17px; }
-        #objective { width: 300px; float: left; }
+        #objective { width: 330px; float: left; }
         #objective p { font-family: Georgia, Serif; font-style: italic; color: #666; }
-        dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 26px 0 0; width: 150px; float: left; height: 100px; border-right: 1px solid #999;  }
-        dd { width: 400px; float: right; }
+        dt { font-style: italic; font-weight: bold; font-size: 18px; text-align: right; padding: 0 15px 0 0; width: 100px; float: left; height: 120px; border-right: 1px solid #999;  }
+        dd { width: 450px; float: right; }
         dd.clear { float: none; margin: 0; height: 15px; }
      </style>
 </head>
@@ -86,7 +86,7 @@
                 <ul>
                     <li>BASH scripting</li>
                     <li><a href="https://www.udemy.com/course/linux-command-line-interface-and-bash-scripting/">Udemy: Linux CLI and BASH Scripting</a></li>
-                    <li>Experience in Installation, configuration, tuning, security, backup, recovery and OS-upgrade on Red Hat Linux (RHEL 6, 7), Fedora, FreeBSD and Ubuntu.</li>
+                    <li>Experience in Installation, configuration, security, backup, recovery and OS-upgrade on Red Hat Linux (RHEL 6, 7), Fedora, FreeBSD and Ubuntu.</li>
                 </ul>
                 </dd>
             
